# vulkan-engine

./: .clang-format  CMakeLists.txt  CMakePresets.json  vcpkg.json
include/app/: application.hpp
include/renderer/: device.hpp  image.hpp  instance.hpp  queue.hpp  surface.hpp  swapchain.hpp
include/renderer/device/: metal.hpp  vulkan.hpp
include/renderer/instance/: metal.hpp  vulkan.hpp
include/renderer/queue/: metal.hpp  vulkan.hpp
include/renderer/surface/: metal.hpp  vulkan.hpp
include/renderer/swapchain/: vulkan.hpp
include/utils/: references.hpp
include/window/: context.hpp  event.hpp  events.hpp  window.hpp
source/app/: application.cpp  main.cpp
source/renderer/: device.cpp  instance.cpp  queue.cpp  surface.cpp  swapchain.cpp
source/renderer/device/: metal.mm  vulkan.cpp
source/renderer/instance/: metal.cpp  vulkan.cpp
source/renderer/queue/: metal.cpp  metal.mm  vulkan.cpp
source/renderer/surface/: metal.cpp  metal.mm  vulkan.cpp
source/renderer/swapchain/: vulkan.cpp
source/window/: callbacks.cpp  context.cpp  utilities.cpp  window.cpp
